# ESPC6_Project

./: .gitignore  .gitmodules  CMakeLists.txt  sdk_setup.bat  sdk_setup.sh
components/hello_word/: CMakeLists.txt
components/hello_word/include/: hello_world.h
components/hello_word/source/: hello_world.c
main/: main.c
