idf_component_register(
    SRCS "source/hello_world.c"                   # list the source files of this component
    INCLUDE_DIRS "include"                        # optional, add here public include directories
#    PRIV_INCLUDE_DIRS                             # optional, add here private include directories
#    REQUIRES
)
